test/cases/bad/bad045.lat
// Cannot cast

class A {}


int main() {
    A b = (int) null;

    return 0;
}